# ScriptingEngine

./: .gitignore  CMakeLists.txt  README.md
include/Serra/: serra.h
playtime/: main.py  script.sbscript
scripts/: script.serra
src/: Compiler.cpp  Compiler.h  VM.cpp  VM.h  main.cpp  parserWrapper.cpp  parserWrapper.h  serra.cpp
